Fixed code and added model files.